--- a/UnitTesting-FirstTask/DeletingEachSecondElement.csproj
+++ b/UnitTesting-FirstTask/DeletingEachSecondElement.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Chess.cs" />
     <Compile Include="MathEquation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
